# dm

./: .gitignore  README.md  package-lock.json  package.json  svelte.config copy.js  svelte.config.js  tailwind.config.js  vite.config.js  vite.config.ts
.cursor/rules/: devenv.mdc
.lh/: svelte.config.js.json  tailwind.config.js.json  vite.config.js.json  vite.config.ts.json
.lh/src/: style.css.json
.lh/src-tauri/: tauri.conf.json.json
.lh/src-tauri/src/: style.css.json
.lh/src/lib/components/: ResizablePanel.svelte.json  TabManager.svelte.json  WorkspaceSwitcher.svelte.json
.lh/src/lib/config/: theme.ts.json
.lh/src/lib/stores/: layout.ts.json  workspace.ts.json
.lh/src/lib/types/: index.ts.json
.lh/src/routes/: +error.svelte.json  +layout.svelte.json  +layout.ts.json  +page.svelte.json
dm/.svn/: wc.db
src/: app.css  app.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/lib/components/: Alert.svelte  Badge.svelte  Button.svelte  Card.svelte  Input.svelte  Modal.svelte  ResizablePanel.svelte  TabManager.svelte  Tabs.svelte  WorkspaceSwitcher.svelte
src/lib/config/: theme.ts
src/lib/layouts/: AppLayout.svelte  BottomBar.svelte  RightSideBar.svelte  SideBar.svelte  TopNav.svelte
src/lib/stores/: layout.ts  workspace.ts
src/lib/types/: index.ts
src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte  App.svelte
